# vae-playground

./: .gitignore  LICENSE  README.md  pyproject.toml  vae.ipynb
src/: util.py  vae.py
src/vae_playground/: util.py
