[project]
name = "vae-playground"
version = "0.1.0"
description = "VAE playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torcheval>=0.0.7",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
]

[project.scripts]
vae-playground = "vae_playground:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
